# pmem-agent

./: .gitattributes  .gitignore  README.md  install.ps1  install.sh  package.json  pyproject.toml
.github/workflows/: publish.yml
agents/: project-memory.md
lib/: pmem.py
src/pmem_agent/: __init__.py  cli.py
